--- a/Yena_GongJu/.classpath
+++ b/Yena_GongJu/.classpath
@@ -13,5 +13,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jre1.8.0_101/lib/ext/mysql-connector-java-5.1.39-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_101/jre/lib/ext/servlet-api.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
