--- a/Yena_GongJu/WebContent/WEB-INF/web.xml
+++ b/Yena_GongJu/WebContent/WEB-INF/web.xml
@@ -14,6 +14,7 @@
   <description>
      Welcome to Tomcat
   </description>
+  
   <servlet>
   	<servlet-name>user</servlet-name>
   	<servlet-class>ldcc.board.controller.UserServlet</servlet-class>
@@ -23,5 +24,31 @@
   	<url-pattern>/user</url-pattern>
   </servlet-mapping>
   
+  <servlet>
+  	<servlet-name>board</servlet-name>
+  	<servlet-class>ldcc.board.controller.BoardServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>board</servlet-name>
+  	<url-pattern>/board</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+  	<servlet-name>comment</servlet-name>
+  	<servlet-class>ldcc.board.controller.CommentServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>comment</servlet-name>
+  	<url-pattern>/comment</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+  	<servlet-name>post</servlet-name>
+  	<servlet-class>ldcc.board.controller.PostServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>post</servlet-name>
+  	<url-pattern>/post</url-pattern>
+  </servlet-mapping>
   
 </web-app>
