--- a/Yena_GongJu/WebContent/WEB-INF/web.xml
+++ b/Yena_GongJu/WebContent/WEB-INF/web.xml
@@ -54,4 +54,8 @@
     <servlet-name>post</servlet-name>
     <url-pattern>/post</url-pattern>
   </servlet-mapping>
+  <servlet-mapping>
+<servlet-name>default</servlet-name>
+<url-pattern>*.css</url-pattern>
+</servlet-mapping>
 </web-app>
