--- a/Yena_GongJu/WebContent/WEB-INF/web.xml
+++ b/Yena_GongJu/WebContent/WEB-INF/web.xml
@@ -9,37 +9,40 @@
 	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS 
 	OF ANY KIND, either express or implied. See the License for the specific 
 	language governing permissions and limitations under the License. -->
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" metadata-complete="true" version="3.1">
-  <display-name>Welcome to Tomcat</display-name>
-  <description>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+	metadata-complete="true" version="3.1">
+	<display-name>Welcome to Tomcat</display-name>
+	<description>
      Welcome to Tomcat
   </description>
-  <servlet>
-    <servlet-name>user</servlet-name>
-    <servlet-class>ldcc.board.controller.UserServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>user</servlet-name>
-    <url-pattern>/user</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>comment</servlet-name>
-    <servlet-class>ldcc.board.controller.CommentServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>comment</servlet-name>
-    <url-pattern>/comment</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <servlet-name>post</servlet-name>
-    <servlet-class>ldcc.board.controller.PostServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>post</servlet-name>
-    <url-pattern>/post</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-<servlet-name>default</servlet-name>
-<url-pattern>*.css</url-pattern>
-</servlet-mapping>
+	<servlet>
+		<servlet-name>user</servlet-name>
+		<servlet-class>ldcc.board.controller.UserServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>user</servlet-name>
+		<url-pattern>/user</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>comment</servlet-name>
+		<servlet-class>ldcc.board.controller.CommentServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>comment</servlet-name>
+		<url-pattern>/comment</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>post</servlet-name>
+		<servlet-class>ldcc.board.controller.PostServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>post</servlet-name>
+		<url-pattern>/post</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>default</servlet-name>
+		<url-pattern>*.css</url-pattern>
+	</servlet-mapping>
 </web-app>
