--- a/Yena_GongJu/WebContent/WEB-INF/web.xml
+++ b/Yena_GongJu/WebContent/WEB-INF/web.xml
@@ -13,10 +13,10 @@
 	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	metadata-complete="true" version="3.1">
-	<display-name>Welcome to Tomcat</display-name>
-	<description>
-     Welcome to Tomcat
-  </description>
+
+	<welcome-file-list>
+		<welcome-file>login.jsp</welcome-file>
+	</welcome-file-list>
 	<servlet>
 		<servlet-name>user</servlet-name>
 		<servlet-class>ldcc.board.controller.UserServlet</servlet-class>
