구글 드라이브와 연동하여 파일 목록 보기 구현

--- a/Yena_GongJu/WebContent/WEB-INF/web.xml
+++ b/Yena_GongJu/WebContent/WEB-INF/web.xml
@@ -41,4 +41,12 @@
 		<servlet-name>post</servlet-name>
 		<url-pattern>/post</url-pattern>
 	</servlet-mapping>
+	<servlet>
+		<servlet-name>file</servlet-name>
+		<servlet-class>ldcc.board.controller.FileServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>file</servlet-name>
+		<url-pattern>/file</url-pattern>
+	</servlet-mapping>
 </web-app>
